create base of karma

--- a/examples/counter/tsconfig.json
+++ b/examples/counter/tsconfig.json
@@ -15,7 +15,9 @@
     "outDir": "./.tmp"
   },
   "include": [
-    "./app/**/*.ts"
+    "./app/**/*.ts",
+    "./test/**/*.ts",
+    "./typings/index.d.ts"
   ],
   "exclude": [
     "node_modules"
