--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -12,9 +12,18 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "json-loader": "^0.5.4",
+    "karma": "^1.1.2",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-mocha": "^1.1.1",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^3.0.0",
+    "power-assert": "^1.4.1",
     "superstatic": "^4.0.2",
     "typescript": "^2.0.0",
-    "webpack": "^1.13.1"
+    "typings": "^1.3.2",
+    "webpack": "^1.13.1",
+    "webpack-espower-loader": "^1.0.1"
   },
   "keywords": [],
   "license": "MIT",
@@ -23,6 +32,7 @@
     "build": "npm run copy-walts && npm run clean && npm run tsc && npm run webpack",
     "clean": "rm -rf ./.tmp",
     "copy-walts": "rm -rf ./node_modules/walts && mkdir ./node_modules/walts && cp -r ../../src ./node_modules/walts/src && cp ../../index.js ./node_modules/walts/index.js && cp ../../index.d.ts ./node_modules/walts/index.d.ts",
+    "karma": "karma start",
     "start": "superstatic --port 8080 --host 127.0.0.1",
     "tsc": "tsc -p .",
     "webpack": "webpack ./.tmp/app/index.js --output-filename ./built/index.js"
