--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -29,13 +29,14 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "npm run copy-walts && npm run clean && npm run tsc && npm run webpack",
+    "build": "npm run walts-build && npm run copy-walts && npm run clean && npm run tsc && npm run webpack",
     "clean": "rm -rf ./.tmp",
     "copy-walts": "rm -rf ./node_modules/walts && mkdir ./node_modules/walts && cp -r ../../src ./node_modules/walts/src && cp ../../index.js ./node_modules/walts/index.js && cp ../../index.d.ts ./node_modules/walts/index.d.ts",
     "karma": "karma start",
     "postinstall": "typings install",
     "start": "superstatic --port 8080 --host 127.0.0.1",
     "tsc": "tsc -p .",
+    "walts-build": "cd ../../ && npm run build && cd ./examples/counter",
     "webpack": "webpack ./.tmp/app/index.js --output-filename ./built/index.js"
   }
 }
