--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "walts",
   "description": "One-way pub/sub architecture for Angular 2",
-  "version": "0.8.0",
+  "version": "0.9.0-beta.0",
   "author": {
     "name": "Crescware",
     "email": "crescware@icloud.com"
