--- a/examples/flux-chat/package.json
+++ b/examples/flux-chat/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "superstatic": "^4.0.3",
-    "typescript": "^2.0.0",
+    "typescript": "^2.1.0-dev.20160806",
     "webpack": "^1.13.1"
   },
   "keywords": [],
