--- a/examples/flux-chat/package.json
+++ b/examples/flux-chat/package.json
@@ -2,11 +2,11 @@
   "name": "flux-chat",
   "version": "0.0.0",
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/compiler": "^2.0.0-rc.4",
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.0-beta.10",
     "zone.js": "^0.6.12"
