support angular 2 rc.5 for examples

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "LICENSE",
     "package.json",
     "README.md",
-    "src/action.js",
-    "src/action.d.ts",
+    "src/actions.js",
+    "src/actions.d.ts",
     "src/dispatcher.js",
     "src/dispatcher.d.ts",
     "src/store.js",
