--- a/examples/flux-chat/package.json
+++ b/examples/flux-chat/package.json
@@ -2,14 +2,15 @@
   "name": "flux-chat",
   "version": "0.0.0",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.0-beta.10",
-    "zone.js": "^0.6.12"
+    "rxjs": "^5.0.0-beta.11",
+    "zone.js": "^0.6.14"
   },
   "devDependencies": {
     "superstatic": "^4.0.3",
