--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "url": "https://github.com/crescware/walts/issues"
   },
   "devDependencies": {
+    "intelli-espower-loader": "^1.0.1",
+    "mocha": "^3.0.2",
+    "power-assert": "^1.4.1",
     "tsconfig-cli": "^2.0.0",
-    "typescript": "^2.0.0"
+    "typescript": "^2.0.0",
+    "typings": "^1.3.3"
+  },
+  "directories": {
+    "test": "test/"
   },
   "files": [
     "index.js",
@@ -45,7 +52,8 @@
   },
   "scripts": {
     "build": "tsconfig -u && tsc -p .",
-    "test": "mocha"
+    "postinstall": "typings install",
+    "test": "npm run build && mocha --require intelli-espower-loader --reporter dot ./test/test.js"
   },
   "typings": "index.d.ts"
 }
