--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -2,14 +2,14 @@
   "name": "counter",
   "version": "0.0.0",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
     "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "0.6.17"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.25"
   },
   "devDependencies": {
     "json-loader": "^0.5.4",
