--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "intelli-espower-loader": "^1.0.1",
     "mocha": "^3.2.0",
     "power-assert": "^1.4.2",
-    "tsconfig-cli": "^2.0.0",
     "typescript": "^2.0.0",
     "typings": "^1.3.3"
   },
@@ -52,7 +51,7 @@
     "url": "https://github.com/crescware/walts"
   },
   "scripts": {
-    "build": "tsconfig -u && tsc -p .",
+    "build": "tsc -p .",
     "typings": "typings install",
     "test": "npm run build && mocha --require intelli-espower-loader --reporter dot ./test/test.js"
   },
