--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "rxjs": "5.0.0-beta.12"
+    "rxjs": "^5.0.1"
   },
   "repository": {
     "type": "git",
