--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "url": "https://github.com/crescware/walts/issues"
   },
   "devDependencies": {
+    "@types/mocha": "^2.2.38",
+    "@types/power-assert": "^1.4.29",
     "intelli-espower-loader": "^1.0.1",
     "mocha": "^3.2.0",
     "power-assert": "^1.4.2",
@@ -51,7 +53,7 @@
   },
   "scripts": {
     "build": "tsc -p .",
-    "typings": "typings install",
-    "test": "npm run build && mocha --require intelli-espower-loader --reporter dot ./test/test.js"
+    "test": "npm run build && mocha --require intelli-espower-loader --reporter dot ./test/test.js",
+    "typings": "typings install"
   }
 }
