--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "intelli-espower-loader": "^1.0.1",
     "mocha": "^3.2.0",
     "power-assert": "^1.4.2",
-    "rxjs": "5.0.1",
+    "rxjs": "^6.0.0",
     "typescript": "^2.1.5"
   },
   "directories": {
@@ -47,7 +47,7 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "rxjs": "^5.0.1"
+    "rxjs": "^6.0.0"
   },
   "repository": {
     "type": "git",
