--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,11 @@
     "lib": [
       "es2015",
       "dom"
-    ]
+    ],
+    "outDir": "./dist",
   },
   "include": [
+    "index.ts",
     "src/**/*.ts",
     "test/**/*.ts"
   ],
